--- a/style.css
+++ b/style.css
@@ -18,10 +18,15 @@ ol[class^="level-"] {
     list-style-type: none;
     font-size: 16px;
 }
-ol[class^="level-"] > li::before{
+ol[class^="level-"] li {
+    position: relative; 
+}
+ol[class^="level-"] li::before {
     position: absolute;
     left: 0;
 }
+
+
 
 /* 
  * First level: 1, 2, 3... 
@@ -33,7 +38,6 @@ ol.level-1 {
 ol.level-1 > li {
     counter-increment: level1;
     margin-bottom: 10px;
-    position: relative;
     padding-left: 40px;
     font-weight: bold;
 }
@@ -43,6 +47,7 @@ ol.level-1 > li * { font-weight: normal; }
 ol.level-1 > li::before {
     content: counter(level1) ".";
 }
+
 
 /* 
  * Second level: 1.1, 1.2, 2.1... 
@@ -58,13 +63,18 @@ ol.level-2 {
 ol.level-2 > li {
     counter-increment: level2;
     margin-bottom: 10px;
-    position: relative;
     padding-left: 40px;
 }
 
 ol.level-2 > li::before {
     content: counter(level1) "." counter(level2);
 }
+
+
+
+
+
+
 
 /* Third level: a.), b.), c.)... */
 /* ol.level-3 {
@@ -77,7 +87,6 @@ ol.level-2 > li::before {
 ol.level-3 > li {
     counter-increment: level3;
     margin-bottom: 10px;
-    position: relative;
     padding-left: 30px;
 }
 
@@ -96,7 +105,6 @@ ol.level-3 > li::before {
 ol.level-4 > li {
     counter-increment: level4;
     margin-bottom: 10px;
-    position: relative;
     padding-left: 30px;
 }
 
