--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 * {
-    padding: 0;
     margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
 html, body {
@@ -8,91 +8,71 @@ html, body {
     width: 100%;
 }
 body {
-    font-family: Arial, sans-serif;
     display: flex;
-    align-items: center;
     justify-content: center;
+    align-items: center;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 ol[class^="level-"] {
     list-style-type: none;
-    font-size: 16px;
 }
 ol[class^="level-"] li {
-    position: relative;
+   position: relative;
 }
 ol[class^="level-"] li::before {
-    position: absolute;
-    left: 0;
+   position: absolute;
+   left: 0;
 }
 
-/* 
- * First level: 1, 2, 3... 
- */
-ol.level-1 {
-    counter-reset: level1;
-}
 ol.level-1 > li {
     counter-increment: level1;
     margin-bottom: 10px;
     padding-left: 40px;
     font-weight: bold;
 }
+
 ol.level-1 > li * { font-weight: normal; }
+
 ol.level-1 > li::before {
     content: counter(level1) ".";
 }
 
-/* 
- * Second level: 1.1, 1.2, 2.1... 
- */
 ol.level-2 {
-    list-style-type: none;
     counter-reset: level2;
-    padding-left: 0px;
     margin-top: 10px;
-    margin-left: -40px;
+    margin-left: -40px
 }
 ol.level-2 > li {
     counter-increment: level2;
-    margin-bottom: 10px;
     padding-left: 40px;
+    margin-bottom: 10px;
 }
 ol.level-2 > li::before {
     content: counter(level1) "." counter(level2);
 }
 
-/* 
- * Third level: a.), b.), c.)... 
- */
 ol.level-3 {
-    list-style-type: none;
     counter-reset: level3;
-    padding-left: 0px;
     margin-top: 10px;
 }
 ol.level-3 > li {
     counter-increment: level3;
-    margin-bottom: 10px;
     padding-left: 30px;
+    margin-bottom: 10px;
 }
 ol.level-3 > li::before {
     content: "(" counter(level3, lower-alpha) ")";
 }
 
-/* 
- * Fourth level: (i), (ii), (iii)... 
- */
 ol.level-4 {
-    list-style-type: none;
     counter-reset: level4;
-    padding-left: 0px;
     margin-top: 10px;
 }
 ol.level-4 > li {
     counter-increment: level4;
-    margin-bottom: 10px;
     padding-left: 30px;
+    margin-bottom: 10px;
 }
 ol.level-4 > li::before {
     content: "(" counter(level4, lower-roman) ")";
